--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <hr>
 <img src="milkyway.jpg" align="right" length="400" height="250">
 <h2> What does Solar System mean? </h2>
-<p> The collection of eight planets and their moons in orbit round the sun, together with smaller bodies in the form of asteroids, meteoroids, and comets. The planets of the solar system are Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus, and Neptune. </p>
+<p> The collection of <a>eight planets and their moons in orbit round the sun, together with smaller bodies in the form of asteroids, meteoroids, and comets. The planets of the solar system are Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus, and Neptune.</a> </p>
 <br>
 <img src="polish-astronomer.jpg" align="right" length="400" height="250">
 <h2> Who Discovered Solar System? </h2>
