--- a/Earth.html
+++ b/Earth.html
@@ -19,6 +19,6 @@
 <p>Land area: 148.9 million km²</p>
 <p>Population: 767.35 crores (2019)</p>
 <br>
-<a href="Index.html"> Return Back To The Main Page To Know More About The Remaining Planets </a>
+<a href="index.html"> Return Back To The Main Page To Know More About The Remaining Planets </a>
 </body>
 </html>
