--- a/Sun.html
+++ b/Sun.html
@@ -13,6 +13,6 @@
 <p>The surface of the sun is about 10,000 degrees Fahrenheit hot, while temperatures in the core reach more than 27 million F, driven by nuclear reactions. One would need to explode 100 billion tons of dynamite every second to match the energy produced by the sun, according to NASA.</p>
 <br>
 <p>The sun is one of more than 100 billion stars in the Milky Way. It orbits some 25,000 light-years from the galactic core, completing a revolution once every 250 million years or so. Roughly three quarters of the Sun's mass consists of hydrogen, the rest is mostly helium, with much smaller quantities of heavier elements, including oxygen, carbon, neon and iron. </p>
-<a href="Solar System.html"> Return Back To The Main Page To Know More About The Other Planets </a>
+<a href="index.html"> Return Back To The Main Page To Know More About The Other Planets </a>
 </body>
 </html>
