--- a/Jupiter.html
+++ b/Jupiter.html
@@ -19,6 +19,6 @@
 <p>Gravity: 24.79 m/s²</p>
 <p>Moons: Europa, Ganymede, Io, Callisto, Amalthea, Valetudo, and 73 more</p>
 <br>
-<a href="Solar System.html"> Return Back To The Main Page To Know More About The Remaining Planets </a>
+<a href="index.html"> Return Back To The Main Page To Know More About The Remaining Planets </a>
 </body>
 </html>
