--- a/Mars.html
+++ b/Mars.html
@@ -18,6 +18,6 @@
 <p>Mass: 6.39 × 10^23 kg (0.107 M⊕)</p>
 <p>Moons: Phobos, Deimos</p>
 <br>
-<a href="Solar System.html"> Return Back To The Main Page To Know More About The Remaining Planets </a>
+<a href="index.html"> Return Back To The Main Page To Know More About The Remaining Planets </a>
 </body>
 </html>
