--- a/Mercury.html
+++ b/Mercury.html
@@ -18,6 +18,6 @@
 <p> Radius: 2,439.7 km </p>
 <p> Mass: 3.285 × 10^23 kg (0.055 M⊕)</p>
 <br>
-<a href="Solar System.html"> Return Back To The Main Page To Know More About The Remaining Planets </a>
+<a href="index.html"> Return Back To The Main Page To Know More About The Remaining Planets </a>
 </body>
 </html>
