--- a/Neptune.html
+++ b/Neptune.html
@@ -19,6 +19,6 @@
 <p> Moons: Triton, Thalassa, Proteus, Hippocamp, Nereid, Naiad, and 8 more </p>
 <p> Discoverers: Urbain Le Verrier, Johann Gottfried Galle, John Couch Adams </p>
 <br>
-<a href="Solar System.html"> Return Back To The Main Page </a>
+<a href="index.html"> Return Back To The Main Page </a>
 </body>
 </html>
