--- a/Uranus.html
+++ b/Uranus.html
@@ -19,6 +19,6 @@
 <p> Discoverer: William Herschel </p>
 <p> Moons: Umbriel, Titania, Miranda, Ariel, Oberon, Puck, Cressida, and 20 more </p>
 <br>
-<a href="Solar System.html"> Return Back To The Main Page To Know More About The Remaining Planets </a>
+<a href="index.html"> Return Back To The Main Page To Know More About The Remaining Planets </a>
 </body>
 </html>
