--- a/Venus.html
+++ b/Venus.html
@@ -18,6 +18,6 @@
 <p> Radius: 6,051.8 km </p>
 <p> Gravity: 8.87 m/s² </p>
 <br>
-<a href="Solar System.html"> Return Back To The Main Page To Know More About The Remaining Planets </a>
+<a href="index.html"> Return Back To The Main Page To Know More About The Remaining Planets </a>
 </body>
 </html>
