--- a/index.html
+++ b/index.html
@@ -14,30 +14,31 @@
 <h2> Who Discovered Solar System? </h2>
 <p> The main idea of the solar system was proposed by the Polish astronomer Nicolaus Copernicus (1473-1543) who said that "The Sun is the center of the Universe" and made the planets move around it in perfect circles </p>
 <br>
-<a href="Sun.html"> <button> Sun </button> </a>
+<table>
+<tr> <td> <a href="Sun.html"> <button> Sun </button> </a> </td> </td>
 <br>
 <br>
-<a href="Mercury.html"> <button> Mercury </button> </a>
+<tr> <td> <a href="Mercury.html"> <button> Mercury </button> </a> </td> </td>
 <br>
 <br>
-<a href="Venus.html"> <button> Venus </button> </a>
+<tr> <td> <a href="Venus.html"> <button> Venus </button> </a> </td> </td>
 <br>
 <br>
-<a href="Earth.html"> <button> Earth </button> </a>
+<tr> <td> <a href="Earth.html"> <button> Earth </button> </a> </td> </td>
 <br>
 <br>
-<a href="Mars.html"> <button> Mars </button> </a>
+<tr> <td> <a href="Mars.html"> <button> Mars </button> </a> </td> </td>
 <br>
 <br>
-<a href="Jupiter.html"> <button> Jupiter </button> </a>
+<tr> <td> <a href="Jupiter.html"> <button> Jupiter </button> </a> </td> </td>
 <br>
 <br>
-<a href="Saturn.html"> <button> Saturn </button> </a>
+<tr> <td> <a href="Saturn.html"> <button> Saturn </button> </a> </td> </td>
 <br>
 <br>
-<a href="Uranus.html"> <button> Uranus </button> </a>
+<tr> <td> <a href="Uranus.html"> <button> Uranus </button> </a> </td> </td>
 <br>
 <br>
-<a href="Neptune.html"> <button> Neptune </button> </a>
+<tr> <td> <a href="Neptune.html"> <button> Neptune </button> </a> </td> </td>
 </body>
 </html>
