--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
 <h2> Who Discovered Solar System? </h2>
 <p> The main idea of the solar system was proposed by the Polish astronomer Nicolaus Copernicus (1473-1543) who said that "The Sun is the center of the Universe" and made the planets move around it in perfect circles </p>
 <br>
-<table>
-<tr> <td> <a href="Sun.html"> <button> Sun </button> </a> </td> </td>
+  <ol style="1">
+<li> <a href="Sun.html"> <button> Sun </button> </a>
 <br>
 <br>
-<tr> <td> <a href="Mercury.html"> <button> Mercury </button> </a> </td> </td>
+<li> <a href="Mercury.html"> <button> Mercury </button> </a>
 <br>
 <br>
-<tr> <td> <a href="Venus.html"> <button> Venus </button> </a> </td> </td>
+<li> <a href="Venus.html"> <button> Venus </button> </a>
 <br>
 <br>
-<tr> <td> <a href="Earth.html"> <button> Earth </button> </a> </td> </td>
+<li> <a href="Earth.html"> <button> Earth </button> </a>
 <br>
 <br>
-<tr> <td> <a href="Mars.html"> <button> Mars </button> </a> </td> </td>
+<li> <a href="Mars.html"> <button> Mars </button> </a>
 <br>
 <br>
-<tr> <td> <a href="Jupiter.html"> <button> Jupiter </button> </a> </td> </td>
+<li> <a href="Jupiter.html"> <button> Jupiter </button> </a>
 <br>
 <br>
-<tr> <td> <a href="Saturn.html"> <button> Saturn </button> </a> </td> </td>
+<li> <a href="Saturn.html"> <button> Saturn </button> </a>
 <br>
 <br>
-<tr> <td> <a href="Uranus.html"> <button> Uranus </button> </a> </td> </td>
+<li> <a href="Uranus.html"> <button> Uranus </button> </a>
 <br>
 <br>
-<tr> <td> <a href="Neptune.html"> <button> Neptune </button> </a> </td> </td>
-</table>
+<li> <a href="Neptune.html"> <button> Neptune </button> </a>
+  </ol>
 </body>
 </html>
